[BlobStorage] Fix UMA reporting.

R=jsbell@chromium.org
BUG=666862

Review-Url: https://codereview.chromium.org/2514513004
Cr-Commit-Position: refs/heads/master@{#433760}

Former-commit-id: 1e85b53656cc7053706890de27b3061a1390a153